[tool.poetry]
name = "encantocommerceapi"
version = "0.1.0"
description = ""
authors = ["Antonio Fernandes <antonio.fernandes.bsi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
djangorestframework = "^3.14.0"
django-filter = "^23.3"
psycopg = {extras = ["binary"], version = "^3.1.12"}
pillow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
